[package]
name = "p2p-content-sharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.43.0", features = ["tcp-tokio"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_json = "1.0"
